--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -206,7 +206,7 @@ a:focus {
 ################################################################# */
 
 #headerwrap {
-	background: url(../img/contact.jpg) no-repeat center top;
+	background: url(../img/cover.jpg) no-repeat center top;
 	margin-top: -60px;
 	padding-top:0px;
 	text-align:center;
