--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,1 @@
-<div id="headerwrap">
-  <img src="{{ "/assets/img/cover.jpg" | prepend: site.baseurl }}" class="img-responsive">
-</div><!-- /headerwrap -->
+<div id="headerwrap"></div>
