--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,22 @@
-<div id="headerwrap"></div>
+<div id="headerwrap">
+<div class="row">
+  <div class="col-lg-12">
+    <div class="intro-message">
+      <h1>Paul Staab</h1>
+      <h3>Welcome to my Personal Homepage.</h3>
+      <hr class="intro-divider">
+      <ul class="list-inline intro-social-buttons">
+        <li>
+          <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+        </li>
+        <li>
+          <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+        </li>
+        <li>
+          <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+</div>
