--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <div id="headerwrap">
+<div ="container">
 <div class="row">
   <div class="col-lg-12">
     <div class="intro-message">
@@ -7,16 +8,21 @@
       <hr class="intro-divider">
       <ul class="list-inline intro-social-buttons">
         <li>
-          <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+          <a href="https://github.com/paulstaab" class="btn btn-default btn-lg">
+          <i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
         </li>
         <li>
-          <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+          <a href="https://plus.google.com/+PaulStaab" class="btn btn-default btn-lg">
+          <i class="fa fa-google-plus fa-fw"></i> <span
+            class="network-name">Google+</span></a>
         </li>
         <li>
-          <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+          <a href="https://de.linkedin.com/in/paulstaab" class="btn btn-default btn-lg">
+          <i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
         </li>
       </ul>
     </div>
   </div>
+</div>
 </div>
 </div>
