--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div id="headerwrap">
-<div ="container">
+<div class="container">
 <div class="row">
   <div class="col-lg-12">
     <div class="intro-message">
