--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -19,9 +19,10 @@ layout: default
             <div class="spacing"></div>
             <h4>Project Details</h4>
             <div class="hline"></div>
-            <p><b>Date:</b> {{ page.date }}</p>
+            <p><b>Type:</b> {{ page.type }}</p>
+            <p><b>Date:</b> {{ page.time }}</p>
             <p><b>Languages:</b> {{ page.languages | array_to_sentence_string }}</p>
-            <p><b>Tagged:</b> {{ page.tags | array_to_sentence_string }}</p>
+            <p><b>Tags:</b> {{ page.tags | array_to_sentence_string }}</p>
             <p><b>Website:</b> <a href="{{ page.website }}">{{ page.website }}</a></p>
         </div>
     </div><! --/row -->
