--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -22,7 +22,9 @@ layout: default
             <p><b>Type:</b> {{ page.type }}</p>
             <p><b>Date:</b> {{ page.time }}</p>
             <p><b>Languages:</b> {{ page.languages | array_to_sentence_string }}</p>
-            <p><b>Tags:</b> {{ page.tags | array_to_sentence_string }}</p>
+            <p><b>Tags:</b> {% for tag in page.tags %}
+              <a class="btn btn-theme" href="{{ '/category/#'  | prepend:site.baseurl  }}{{ tag }}" role="button">{{ tag }})</a>	         
+            {% endfor %}
             <p><b>Website:</b> <a href="{{ page.website }}">{{ page.website }}</a></p>
         </div>
     </div><! --/row -->
