--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -23,7 +23,7 @@ layout: default
             <p><b>Date:</b> {{ page.time }}</p>
             <p><b>Languages:</b> {{ page.languages | array_to_sentence_string }}</p>
             <p><b>Languages:</b> {% for lang in page.languages %}
-                <a class="btn btn-theme" href="{{ '/category/#'  | prepend:site.baseurl  }}{{ lang }}" role="button">{{ lang }}</a>	         
+                <div class="btn btn-theme">{{ lang }}</div>	         
                 {% endfor %}
             </p>
             <p><b>Website:</b> <a href="{{ page.website }}">{{ page.website }}</a></p>
