add license information

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,12 +16,13 @@
                 </p>
             </div>
             <div class="col-lg-4">
-                <h4>Our Bunker</h4>
+                <h4>License</h4>
                 <div class="hline-w"></div>
                 <p>
-                    {% for line in site.address.first.lines %}
-                        {{ line }} <br>
-                    {% endfor %}
+                  Feel free to use the content on this page under the
+                  conditions of the 
+                  <a href='https://creativecommons.org/licenses/by/4.0/'>CC BY
+                    4.0</a> license.
                 </p>
             </div>
         </div><! --/row -->
