--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/assets/css/custom.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/shariff.min.css" | prepend: site.baseurl }}">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
