--- a/_includes/sharing_buttons.html
+++ b/_includes/sharing_buttons.html
@@ -1,1 +1,1 @@
-<div class="shariff" data-lang='en' data-services="[&quot;googleplus&quot;,&quot;twitter&quot;,&quot;facebook&quot;,&quot;mail&quot;]"></div>
+<div class="shariff" data-lang='en' data-services="[&quot;googleplus&quot;,&quot;twitter&quot;,&quot;facebook&quot;]"></div>
