--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,4 +29,5 @@
     <![endif]-->
 
     <script src="{{ "/assets/js/modernizr.js" | prepend: site.baseurl }}"></script>
+    <link rel="alternate" type="application/rss+xml" title="Blog Posts" href="{{"/feed.xml" | prepend: site.baseurl }}" />
 </head>
