--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -27,3 +27,31 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
+.bgimg {
+  text-align: center;
+  min-height: 400px;
+  width: 100%;
+  padding-top: 150px;
+  padding-bottom: 230px;
+  position: relative;
+}
+
+.science-papers {
+  background: url("../img/science.jpg") no-repeat scroll center center / cover transparent;
+  margin-top: -60px;
+}
+
+.science-software {
+  background: url("../img/source-code.jpg") no-repeat scroll center center / cover transparent;
+}
+
+.bgimgcredits {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: white;
+}
+
+.transparent{
+  background:rgba(255,255,255,0.9);
+}
