--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script src="{{ "/assets/js/modernizr.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/assets/js/instafeed.min.js" | prepend: site.baseurl }}"></script>
+
+    <!-- <script src="{{ "/assets/js/modernizr.js" | prepend: site.baseurl }}"></script> -->
     <link rel="alternate" type="application/rss+xml" title="Blog Posts" href="{{"/feed.xml" | prepend: site.baseurl }}" />
 </head>
