--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -44,3 +44,13 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: #384452;
 }
 
+#instafeed img {
+  width: 100%;
+  height: auto;
+}
+
+#instafeed .likes {
+  float: right;
+  padding-bottom: 20px;
+}
+
