--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -26,6 +26,11 @@
   line-height: inherit;
 }
 
+.intro-message a {
+  color:#01b2fe;
+  font-weight: 600;
+}
+
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: #384452;
 }
