--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,3 +45,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   padding-bottom: 20px;
 }
 
+.navbar-transparent {
+  background: rgba(0,0,0,0.5) !important;
+}
+
