--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <div id="footerwrap">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-sm-6 col-md-4">
                 <h4>About</h4>
                 <div class="hline-w"></div>
                 <p>{{ site.about }}</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-sm-6 col-md-4">
                 <h4>Social Links</h4>
                 <div class="hline-w"></div>
                 <p>
@@ -15,7 +15,8 @@
                     {% endfor %}
                 </p>
             </div>
-            <div class="col-lg-4">
+            <!--- 
+            <div class="col-sm-6 col-md-4">
                 <h4>License</h4>
                 <div class="hline-w"></div>
                 <p>
@@ -25,6 +26,7 @@
                     4.0</a> license.
                 </p>
             </div>
+            -->
         </div><! --/row -->
     </div><! --/container -->
 </div><! --/footerwrap -->
