draft project page

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -18,9 +18,10 @@ layout: default
             <div class="hline"></div>
             <p><b>Type:</b> {{ page.type }}</p>
             <p><b>Date:</b> {{ page.time }}</p>
-            <p><b>Languages:</b> {{ page.languages | array_to_sentence_string }}</p>
+            <!-- <p><b>Languages:</b> {{ page.languages | array_to_sentence_string }}</p>
             <p><b>Tags:</b> {{ page.tags | array_to_sentence_string }}</p>
-            <p><b>Website:</b> <a href="{{ page.website }}">{{ page.website }}</a></p>
+            <p><b>Website:</b> <a href="{{ page.website }}">{{ page.website
+            }}</a></p> -->
         </div>
     </div><! --/row -->
 </div><! --/container -->
