--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,9 +13,8 @@
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
         <li {% if page.title == "Home" %}class="active"{% endif %}><a href="{{"/" | prepend: site.baseurl }}">HOME</a></li>
+        <li {% if page.title == "Projects" %}class="active"{% endif %}><a href="{{"/projects/" | prepend: site.baseurl }}">PROJECTS</a></li>
         <li {% if page.title == "Photos" %}class="active"{% endif %}><a href="{{"/photos/" | prepend: site.baseurl }}">PHOTOS</a></li>
-        <!-- <li {% if page.title == "Projects" %}class="active"{% endif %}><a
-          href="{{"/projects/" | prepend: site.baseurl }}">PROJECTS</a></li> -->
         <li {% if page.title == "Science" %}class="active"{% endif %}><a href="{{"/science/" | prepend: site.baseurl }}">SCIENCE</a></li>
       </ul>
     </div><!--/.nav-collapse -->
