--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,10 +12,17 @@
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
-        <li {% if page.title == "Home" %}class="active"{% endif %}><a href="{{"/" | prepend: site.baseurl }}">HOME</a></li>
-        <li {% if page.title == "Projects" %}class="active"{% endif %}><a href="{{"/projects/" | prepend: site.baseurl }}">PROJECTS</a></li>
-        <li {% if page.title == "Photos" %}class="active"{% endif %}><a href="{{"/photos/" | prepend: site.baseurl }}">PHOTOS</a></li>
-        <li {% if page.title == "Science" %}class="active"{% endif %}><a href="{{"/science/" | prepend: site.baseurl }}">SCIENCE</a></li>
+        {% for link in site.navigation %}
+            {% assign page_url_parts = page.url | split: '/' %}
+            {% assign link_url_parts = link.url | split: '/' %}
+            {% assign current = nil %}
+            {% if page_url_parts[1] == link_url_parts[1] %}
+                {% assign current = 'active' %}
+            {% endif %}
+            <li class=" {% if forloop.first %}first {% endif %}{{ current }}{% if forloop.last %} last{% endif %}">
+                <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+            </li>
+        {% endfor %}
       </ul>
     </div><!--/.nav-collapse -->
   </div>
