--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,15 +13,23 @@ layout: default
         </div>
 
         <div class="col-lg-4 col-lg-offset-1">
+          {% if page.img %}
             <img src="{{ "/assets/img/project/" | prepend: site.baseurl }}{{ page.img }}" alt="Logo">
+          {% endif %}
             <h4>Project Details</h4>
             <div class="hline"></div>
             <p><b>Type:</b> {{ page.type }}</p>
-            <p><b>Date:</b> {{ page.time }}</p>
-            <!-- <p><b>Languages:</b> {{ page.languages | array_to_sentence_string }}</p>
-            <p><b>Tags:</b> {{ page.tags | array_to_sentence_string }}</p>
-            <p><b>Website:</b> <a href="{{ page.website }}">{{ page.website
-            }}</a></p> -->
+            <p><b>My Role:</b> {{ page.role }}</p>
+            <p><b>Date:</b> {{ page.date_start }}</p>
+            <p><b>Language:</b> {{ page.languages | array_to_sentence_string }}</p>
+            {% if page.website %}
+            <p><b>Website:</b> <a href="{{ page.website  }}">{{ page.website }}</a>
+            {% endif %}
+            {% if page.github %}
+            <p><b>Code:</b> <a href="https://github.com/{{ page.github  }}" class="fa fa-github">
+              {{ page.github }}</a>
+            {% endif %}
+            </p>
         </div>
     </div><! --/row -->
 </div><! --/container -->
