--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,18 +15,14 @@
                     {% endfor %}
                 </p>
             </div>
-            <!--- 
             <div class="col-sm-6 col-md-4">
-                <h4>License</h4>
+                <h4>Crypto</h4>
                 <div class="hline-w"></div>
                 <p>
-                  Feel free to use the content on this page under the
-                  conditions of the 
-                  <a href='https://creativecommons.org/licenses/by/4.0/'>CC BY
-                    4.0</a> license.
+                My PGP-Key is <a href="{{ site.baseurl }}/E6004AD1.asc">400D 56AF E600 4AD1</a>
+                  (<a href="https://keybase.io/paulstaab">keybase.io</a>).
                 </p>
             </div>
-            -->
         </div><! --/row -->
     </div><! --/container -->
 </div><! --/footerwrap -->
