combine css files

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Paul Staab">
     <link rel="shortcut icon" href="{{ "/assets/ico/favicon.ico" | prepend: site.baseurl }}">
 
     <title>paulstaab.de{% if page.title %} - {{ page.title }}{% endif %}</title>
@@ -16,8 +16,7 @@
     <link href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}" rel="stylesheet">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/assets/css/custom.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/css/shariff.min.css" | prepend: site.baseurl }}">
+    <!-- <link rel="stylesheet" href="{{ "/assets/css/shariff.min.css" | prepend: site.baseurl }}"> -->
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -28,7 +27,9 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!--
     <script type="text/javascript" src="{{ "/assets/js/instafeed.min.js" | prepend: site.baseurl }}"></script>
+    -->
 
     <!-- <script src="{{ "/assets/js/modernizr.js" | prepend: site.baseurl }}"></script> -->
     <link rel="alternate" type="application/rss+xml" title="News" href="{{"/feed/" | prepend: site.baseurl }}" />
