--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,1 +1,10 @@
+##################################################################
+# style.css
+##################################################################
 {% include css/style.css %}
+
+##################################################################
+# custom.css
+##################################################################
+{% include css/custom.css %}
+
