--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,6 +6,12 @@
             <input type="text" class="form-control" placeholder="Search something">
         </p>
     <div class="spacing"></div> -->
+    <h4>About</h4>
+    <div class="hline"></div>
+   <p><i>ML in Production</i> is my personal blog, where I write about Data Science and Machine Learning
+         with a particular focus on the steps that are neccesary to use both realiably in applications
+         and products.
+    </p>         
     <h4>Subscribe</h4>
     <div class="hline"></div>
         <p>
