--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
     <h4>Recent Posts</h4>
     <div class="hline"></div>
         <ul class="popular-posts">
-            {% for post in site.categories['blog'] limit:4 %} 
+            {% for post in site.posts limit:4 %} 
                 <li>
                 {% if post.thumb %}
                     <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
