Minify css stylesheets

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,15 +8,8 @@
 
     <title>paulstaab.de{% if page.title %} - {{ page.title }}{% endif %}</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{{ "/assets/css/bootstrap.css" | prepend: site.baseurl }}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
+    <!-- Combined CSS Stylecheets  -->
     <link href="{{ "/assets/css/combined.css" | prepend: site.baseurl }}" rel="stylesheet">
-    <link href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}" rel="stylesheet">
-    
-    <!-- Custom CSS -->
-    <!-- <link rel="stylesheet" href="{{ "/assets/css/shariff.min.css" | prepend: site.baseurl }}"> -->
     
     <link rel="alternate" type="application/rss+xml" title="Blog posts" href="{{"/feed.xml" | prepend: site.baseurl }}" />
 </head>
