--- a/assets/css/combined.css
+++ b/assets/css/combined.css
@@ -1,3 +1,12 @@
 ---
-layout: combined
+layout: stylesheet
 ---
+
+{% include css/bootstrap.css %}
+
+{% include css/font-awesome.min.css %}
+
+{% include css/custom.css %}
+
+{% include css/style.css %}
+
