Combine js files

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,6 +1,4 @@
-<script src="{{ "/assets/js/jquery.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/assets/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/assets/js/custom.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/combined.js" | prepend: site.baseurl }}"></script>
 
 {% if site.analytics %}
 <script>
