--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,5 @@
     <!-- Combined CSS Stylecheets  -->
     <link href="{{ "/assets/css/combined.css" | prepend: site.baseurl }}" rel="stylesheet">
     
-    <link rel="alternate" type="application/rss+xml" title="Blog posts" href="{{"/feed.xml" | prepend: site.baseurl }}" />
+    <link rel="alternate" type="application/rss+xml" title="Blog Posts" href="{{"/feed.xml" | prepend: site.baseurl }}" />
 </head>
