--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,4 @@
 <div class="col-lg-4">
-   <!--  <h4>Search</h4>
-    <div class="hline"></div>
-        <p>
-            <br/>
-            <input type="text" class="form-control" placeholder="Search something">
-        </p>
-    <div class="spacing"></div> -->
-   
     <h4>About</h4>
     <div class="hline"></div>
     <p>{{ site.blog.description }}</p>   
@@ -37,7 +29,7 @@
     <div class="hline"></div>
     {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "publication" %}
         <p>
-            <a href="{{ '/category/#'  | prepend: site.baseurl  }}{{ category | first }}"><i class="fa fa-angle-right"></i> {{ category | first | capitalize }}</a>
+            <a href="{{ '/blog/categories.html#' | prepend: site.baseurl  }}{{ category | first }}"><i class="fa fa-angle-right"></i> {{ category | first | capitalize }}</a>
             <span class="badge badge-theme pull-right">{{ category | last | size }}</span>
         </p>
     {% endunless %}{% endfor %}
@@ -46,8 +38,9 @@
     <h4>Popular Tags</h4>
     <div class="hline"></div>
     <p>
-    {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "publication" %}
-            <a class="btn btn-theme" href="{{ '/category/#'  | prepend: site.baseurl  }}{{ category | first }}" role="button">{{ category | first | capitalize }} ({{ category | last | size }})</a>	         
-        {% endunless %}{% endfor %}
+    {% for tag in site.tags %}
+            <a class="btn btn-theme" href="{{ '/blog/tags.html#'  | prepend: site.baseurl  }}{{ tag | first }}" role="button">{{ tag | first | capitalize }} ({{ tag | last | size }})</a>	         
+    {% endfor %}
     </p>
 </div>
+
