--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -77,10 +77,11 @@ body {
 	background: #ffffff; 
 	margin: 0; 
 	height: 100%; 
-	color: {{ site.colors.secondary }};
+	color: {{ site.colors.text }};
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
-	}
+	font-size: 18px; 
+}
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Raleway', sans-serif;
@@ -92,9 +93,8 @@ p {
 	margin-bottom: 12px; 
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
-	font-size: 16px; 
 	line-height: 24px;
-	color: {{ site.colors.secondary }}; 
+	color: {{ site.colors.text }}; 
 	margin-top: 10px; 
 }
 
@@ -120,67 +120,27 @@ a:focus {
   color:{{ site.colors.link_hover }};
 }
 
-::-moz-selection  {
-	color: #fff;
-	text-shadow:none;
-	background:{{ site.colors.secondary }};
-}
-::selection {
-	color: #fff;
-	text-shadow:none;
-	background:{{ site.colors.secondary }};
-}
-
 .centered {
 	text-align: center
 }
 
+
 /*	################################################################
 	BOOTSTRAP MODIFICATIONS & TWEAKS
 ################################################################# */
-.navbar {
-	min-height: 70px;
-	padding-top: 10px;
-	margin-bottom: 0px;
-}
-
 .navbar-brand {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 900;
 }
 
-.navbar-header .navbar-brand {
-	color: white;
-}
-
-.navbar-default .navbar-nav > li > a {
-	color: white;
+.navbar-nav > li > a {
+	color: {{ site.colors.text_menu }};
 	font-weight: 700;
 	font-size: 12px;
 }
 
-.navbar-default .navbar-nav > li > a:hover {
+.navbar-nav > li > a:hover {
 	color: {{ site.colors.primary }};
-}
-
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: {{ site.colors.primary }};
-	background-color: transparent;
-}
-
-.navbar-default {
-	background-color: {{ site.colors.secondary }};
-	border-color: transparent;
-}
-
-.dropdown-menu {
-	background: {{ site.colors.secondary }};
-}
-
-.dropdown-menu > li > a {
-	color: white;
-	font-weight: 700;
-	font-size: 12px;
 }
 
 .btn-theme {
@@ -291,122 +251,6 @@ a:focus {
 	margin: 0 auto;
 }
 
-/* Services Wrap */
-#service {
-	margin-top: 100px;
-	margin-bottom: 80px;
-}
-
-#service i {
-	color: {{ site.colors.primary }};
-	font-size: 60px;
-	padding: 15px;
-}
-
-/* Portfolio Wrap */
-#portfoliowrap {
-	padding-top: 60px;
-	margin-bottom: 60px;
-	display: block;
-	text-align: center
-}
-
-#portfoliowrap h3 {
-	margin-bottom: 25px;
-}
-
-.portfolio {
-	padding:0 !important;
-	margin:0 !important;
-	display:block;
-}
-
-
-.portfolio-item .title:before {border-radius:0; display:none}
-.portfolio-item p {margin:0px 0 30px;}
-.portfolio-item h3 {margin:-10px 0 10px; font-size:16px; text-transform:uppercase;}
-
-
-.tpl6 h3
-{
-	color:#fff;
-	margin:0;
-	padding:40px 5px 0;
-	font-size:16px;
-	text-transform:uppercase;
-}
-.tpl6 .dmbutton
-{
-	display:inline-block;
-	margin:30px 5px 20px 5px;
-	font-size:13px;
-}
-
-.tpl6 .bg
-{
-	height:100%;
-	width:100%;
-	background-color:{{ site.colors.primary }};
-	background-color:rgba({{ site.colors.primary_rgb }},.9);
-	text-align:center;
-}
-
-/* Testimonials Wrap */
-#twrapback {
-    background-color: {{ site.colors.primary }};
-    background-color:rgba({{ site.colors.primary_rgb }},.8);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-#twrap {
-    background: url(../img/t-back.jpg) no-repeat center top;
-    position: relative;
-    margin-top: 0px;
-	padding-top:60px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 450px;
-	width: 100%;
-	
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
-#twrap i {
-	font-size: 50px;
-	color: white;
-	margin-bottom: 25px;
-}
-
-#twrap p {
-	color: white;
-	font-size: 15px;
-	line-height: 30px;
-}
-
-/* clients logo */
-#cwrap {
-	background: #f7f7f7;
-	margin-top: 0px;
-	padding-top: 80px;
-	padding-bottom: 100px;
-}
-
-#cwrap h3 {
-	margin-bottom: 60px;
-}
 
 /* Footer */
 #footerwrap {
@@ -416,16 +260,16 @@ a:focus {
 }
 
 #footerwrap p {
-	color: {{ site.colors.footer_content }};
+	color: {{ site.colors.text_menu }};
 }
 
 #footerwrap h4 {
-	color: {{ site.colors.footer_heading }};
+	color: {{ site.colors.text_menu }};
 }
 
 #footerwrap i {
 	font-size: 30px;
-	color: {{ site.colors.footer_content }};
+	color: {{ site.colors.text_menu }};
 	padding-right: 25px;
 }
 
@@ -440,8 +284,8 @@ a:focus {
 
 #blue {
 	background: {{ site.colors.primary }};
-	margin-top: 60px;
-	margin-bottom: 60px;
+	margin-top: 55px;
+	margin-bottom: 55px;
 	padding-top: 25px;
 	padding-bottom: 25px;
 }
@@ -469,28 +313,6 @@ csmall {
 
 .badge-theme {
 	background: {{ site.colors.primary }};
-}
-
-/* Contact Page */
-#contactwrap {
-	background: url(../img/contact.jpg) no-repeat center top;
-	margin-top: -60px;
-	padding-top:0px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 400px;
-	width: 100%;
-	
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
 }
 
 /* Blog Page */
@@ -537,3 +359,49 @@ a.anchor{
     top: -80px; 
     visibility: hidden;
 }
+
+/*	################################################################
+	Tables
+################################################################# */
+
+
+table {
+  padding: 0; 
+  margin-left: auto; 
+  margin-right: auto;
+}
+
+table tr {
+	border-top: 1px solid #cccccc;
+	background-color: white;
+	margin: 0;
+	padding: 0; 
+}
+ 
+table tr:nth-child(2n) {
+  background-color: #f8f8f8; 
+}
+
+table tr th {
+	font-weight: bold;
+	border: 1px solid #cccccc;
+	text-align: left;
+	margin: 0;
+	padding: 6px 13px; 
+}
+    
+table tr td {
+	border: 1px solid #cccccc;
+	text-align: left;
+	margin: 0;
+	padding: 6px 13px; 
+}
+    
+table tr th :first-child, table tr td :first-child {
+  margin-top: 0;
+}
+
+table tr th :last-child, table tr td :last-child {
+  margin-bottom: 0; 
+}
+
