--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,29 +1,30 @@
-<!-- Fixed navbar -->
-<div class="navbar {% if page.title == "Home" %}navbar-transparent{% endif %} navbar-default navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{{ "/"  | prepend: site.baseurl }}">{{ site.title }}</a>
-    </div>
-    <div class="navbar-collapse collapse navbar-right">
-      <ul class="nav navbar-nav">
-        {% for link in site.navigation %}
-            {% assign page_url_parts = page.url | split: '/' %}
-            {% assign link_url_parts = link.url | split: '/' %}
-            {% assign current = nil %}
-            {% if page_url_parts[1] == link_url_parts[1] %}
-                {% assign current = 'active' %}
-            {% endif %}
-            <li class=" {% if forloop.first %}first {% endif %}{{ current }}{% if forloop.last %} last{% endif %}">
-                <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
-            </li>
-        {% endfor %}
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
-</div>
+<!-- Navigation Bar -->
+{% if page.title == "Home" %}
+<nav class="navbar fixed-top navbar-dark navbar-transparent navbar-expand-md ">
+{% else %}
+<nav class="navbar fixed-top navbar-light navbar-expand-md">
+{% endif %}
+	<div class="container">
+		<a class="navbar-brand" href="{{ "/"  | prepend: site.baseurl }}">{{ site.title }}</a>
+
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nbt" aria-controls="nbt" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="nbt">
+			<ul class="navbar-nav ml-auto">
+			{% for link in site.navigation %}
+				{% assign page_url_parts = page.url | split: '/' %}
+				{% assign link_url_parts = link.url | split: '/' %}
+				{% assign current = nil %}
+				{% if page_url_parts[1] == link_url_parts[1] %}
+					{% assign current = 'active' %}
+				{% endif %}
+				<li class="nav-item {% if forloop.first %}first {% endif %}{{ current }}{% if forloop.last %} last{% endif %}">
+					<a class="nav-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+				</li>
+			{% endfor %}
+			</ul>
+		</div> 
+	</div>
+</nav>
+
