--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,7 @@
                     {% endfor %}
                 </p>
             </div>
-        </div><! --/row -->
-    </div><! --/container -->
-</div><! --/footerwrap -->
+        </div>
+    </div>
+</div>
+
