--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,4 @@
 <div class="col-lg-4">
-    <h4>About</h4>
-    <div class="hline"></div>
-    <p>{{ site.blog.description }}</p>   
-    <div class="spacing"></div>
     <h4>Subscribe</h4>
     <div class="hline"></div>
         <p>
@@ -18,7 +14,7 @@
                 {% if post.thumb %}
                     <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
                 {% endif %}
-                    <p><a href="{{ post.url }}">{{ post.title }}</a></p>
+                    <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
                 <em>Posted on {{ post.date | date_to_string }}</em>
             </li>
             {% endfor %} 
