--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -128,6 +128,10 @@ a:focus {
 /*	################################################################
 	BOOTSTRAP MODIFICATIONS & TWEAKS
 ################################################################# */
+.navbar {
+  background: {{ site.colors.secondary }}
+}
+
 .navbar-brand {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 900;
@@ -145,10 +149,11 @@ a:focus {
 
 .btn-theme {
   color: #fff;
-  background-color: {{ site.colors.secondary }};
-  border-color: {{ site.colors.secondary }};
+  background-color: {{ site.colors.primary }};
+  border-color: {{ site.colors.primary }};
   margin: 4px;
 }
+
 .btn-theme:hover,
 .btn-theme:focus,
 .btn-theme:active,
