--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,11 @@
 layout: default
 ---
 
-{% include wrap.html %}
-
 <div class="container mtb">
     <div class="row">
-        <! -- SINGLE POST -->
+        <!-- SINGLE POST -->
         <div class="col-lg-8">
-            <! -- Blog Post  -->
+            <!-- Blog Post  -->
             {% if page.img.file %}
             <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ page.img.file }}">
                <csmall class="img-copyright">Picture by <a href="{{ page.img.link }}">{{ page.img.credit }}</a>,  
@@ -27,5 +25,5 @@ layout: default
         
         {% include sidebar.html %}
 
-    </div><! --/row -->
-</div><! --/container -->
+    </div>
+</div>
