--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,5 +15,9 @@ layout: blog
     {{ content }}
 
     <div class="spacing"></div>
-    {% include sharing_buttons.html %}
+    <p>
+    {% for tag in site.tags %}
+       <a class="btn btn-theme" href="{{ '/blog/tags.html#'  | prepend: site.baseurl  }}{{ tag | first }}" role="button">{{ tag | first }}</a>	         
+    {% endfor %} 
+    </p>
 
