--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,3 @@
-<div class="col-lg-4">
     <h4>Subscribe</h4>
     <div class="hline"></div>
         <p>
@@ -25,8 +24,8 @@
     <div class="hline"></div>
     {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "publication" %}
         <p>
-            <a href="{{ '/blog/categories.html#' | prepend: site.baseurl  }}{{ category | first }}"><i class="fa fa-angle-right"></i> {{ category | first | capitalize }}</a>
-            <span class="badge badge-theme pull-right">{{ category | last | size }}</span>
+            <a href="{{ '/blog/categories.html#' | prepend: site.baseurl  }}{{ category | first }}"><i class="fa fa-angle-right"></i> {{ category | first }}</a>
+            <span class="badge badge-theme">{{ category | last | size }}</span>
         </p>
     {% endunless %}{% endfor %}
     <div class="spacing"></div>
@@ -35,8 +34,7 @@
     <div class="hline"></div>
     <p>
     {% for tag in site.tags %}
-            <a class="btn btn-theme" href="{{ '/blog/tags.html#'  | prepend: site.baseurl  }}{{ tag | first }}" role="button">{{ tag | first | capitalize }} ({{ tag | last | size }})</a>	         
+            <a class="btn btn-theme" href="{{ '/blog/tags.html#'  | prepend: site.baseurl  }}{{ tag | first }}" role="button">{{ tag | first }} ({{ tag | last | size }})</a>	         
     {% endfor %}
     </p>
-</div>
 
