--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,6 +1,20 @@
 ---
 layout: default
 ---
-{% include wrap.html %}    
 
-    {{ content }}
+<div class="container mtb">
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2">
+
+      {{ content }}
+
+    </div>
+    <div class="col-lg-2 d-none d-xl-block">
+      
+      {% include sidebar.html %}
+
+    </div>
+
+  </div>
+</div>
+
