--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,31 +1,23 @@
 ---
-layout: default
+layout: blog
 ---
 
-{% include wrap.html %}
+    <!-- Blog Post  -->
+    {% if page.img.file %}
+    <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ page.img.file }}">
+       <csmall class="img-copyright">Picture by <a href="{{ page.img.link }}">{{ page.img.credit }}</a>,  
+	       <a href="{{ page.img.license-link }}">{{ page.img.license }}</a>, 
+	       {{ page.img.comment }}</csmall></p>
+    {% endif %}
+    <h1>{{ page.title }}</h1>
+    <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | By: {{ page.author }}</csmall></p>
+      
+    {{ content }}
 
-<div class="container mtb">
-    <div class="row">
-        <! -- SINGLE POST -->
-        <div class="col-lg-8">
-            <! -- Blog Post  -->
-            {% if page.img.file %}
-            <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ page.img.file }}">
-               <csmall class="img-copyright">Picture by <a href="{{ page.img.link }}">{{ page.img.credit }}</a>,  
-                       <a href="{{ page.img.license-link }}">{{ page.img.license }}</a>, 
-                       {{ page.img.comment }}</csmall></p>
-            {% endif %}
-            <a href="{{ page.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ page.title }}</h3></a>
-            <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | By: {{ page.author }}</csmall></p>
-              
-            {{ content }}
+    <div class="spacing"></div>
+    <p>
+    {% for tag in site.tags %}
+       <a class="btn btn-theme" href="{{ '/blog/tags.html#'  | prepend: site.baseurl  }}{{ tag | first }}" role="button">{{ tag | first }}</a>	         
+    {% endfor %} 
+    </p>
 
-            <div class="spacing"></div>
-            {% include sharing_buttons.html %}
-
-        </div><! --/col-lg-8 -->
-        
-        {% include sidebar.html %}
-
-    </div><! --/row -->
-</div><! --/container -->
