--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="container">
+<div class="container mtb">
   <div class="row justify-content-center">
     <div class="col-12 col-md-10 col-lg-8">
 
@@ -11,4 +11,3 @@ layout: default
     </div>
   </div>
 </div>
-
