Add social links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 
             {{ content }}
 
-        {% include js.html %}
+        {% include footer.html %}
+	{% include js.html %}
     </body>
 </html>
