--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -269,6 +269,8 @@ a:focus {
 
 #footerwrap h4 {
 	color: {{ site.colors.text_menu }};
+	padding-bottom: 0.5em;
+    	border-bottom: 1px solid;
 }
 
 #footerwrap i {
