--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,12 @@
 <div id="footerwrap">
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 col-md-4">
+		    <div class="col-sm-6 col-lg-4 offset-lg-2 d-none d-sm-block">
                 <h4>About</h4>
-                <div class="hline-w"></div>
                 <p>{{ site.about }}</p>
             </div>
-            <div class="col-sm-6 col-md-4">
+		<div class="col-sm-6 col-lg-4">
                 <h4>Social Links</h4>
-                <div class="hline-w"></div>
                 <p>
                     {% for network in site.social %}
                         <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-{{ network.title }}"></i></a>
